Add Identity via metadata
- Add route /api/chatbot/inject
- export service form module
- middleware that handles injection in session
  - the middleware does a init call first -> this is to prevent
  triggering a bug in the engine
- Add test for route, injection
- Add metadat to messager
- Add documentation
